fix: thread safety fix: #delete in SimpleBoard chore: mark #translateComponent for removal fix: typo chore: improve readability fix: some line size checks