@@ -1,9 +1,8 @@
 package de.timongcraft.veloboard;
 
-import com.google.common.annotations.Beta;
-import com.velocitypowered.api.network.ProtocolVersion;
 import com.velocitypowered.api.proxy.Player;
 import com.velocitypowered.proxy.protocol.packet.chat.ComponentHolder;
+import de.timongcraft.veloboard.utils.ListUtils;
 import de.timongcraft.velopacketimpl.network.protocol.packets.DisplayObjectivePacket;
 import de.timongcraft.velopacketimpl.network.protocol.packets.ResetScorePacket;
 import de.timongcraft.velopacketimpl.network.protocol.packets.UpdateObjectivesPacket;
@@ -13,22 +12,21 @@ import de.timongcraft.velopacketimpl.utils.annotations.Since;
 import net.kyori.adventure.text.Component;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.Unmodifiable;
-import org.jetbrains.annotations.UnmodifiableView;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
+
+import static com.velocitypowered.api.network.ProtocolVersion.MINECRAFT_1_20_3;
 
 /**
  * <p><b>Note</b>: With this board, you are no longer limited in line size* and avoid the overhead of teams,
  * as the normal {@link de.timongcraft.veloboard.VeloBoard} requires a team to be created for each line, which is no longer necessary due to new display-name introduced in 1.20.3.
  */
 @SuppressWarnings("unused")
-@Since(ProtocolVersion.MINECRAFT_1_20_3)
-@Beta
+@Since(MINECRAFT_1_20_3)
 public class SimpleBoard extends AbstractBoard {
 
     private ComponentHolder title;
@@ -46,52 +44,51 @@ public class SimpleBoard extends AbstractBoard {
 
     public SimpleBoard(Player player, Component title, @Nullable ComponentUtils.NumberFormat defaultNumberFormat) {
         super(player);
-        setTitleSilent(title);
+        setTitleSilent(Objects.requireNonNull(title, "title"));
         this.defaultNumberFormat = defaultNumberFormat != null ? defaultNumberFormat.compiled(player.getProtocolVersion()) : null;
         EMPTY_ENTRY = new LinesEntry(new ComponentHolder(player.getProtocolVersion(), Component.empty()), null);
     }
 
     public void initialize() {
-        sendObjectivePacket(UpdateObjectivesPacket.Mode.CREATE_SCOREBOARD);
-        sendPacket(new DisplayObjectivePacket(1, id));
+        withLock(() -> {
+            sendObjectivePacket(UpdateObjectivesPacket.Mode.CREATE_SCOREBOARD);
+            sendPacket(new DisplayObjectivePacket(1, id));
+        });
     }
 
     public void resend() {
-        clear();
-        initialize();
+        withLock(() -> {
+            clear();
+            initialize();
 
-        linesLock.lock();
-        try {
-            for (int i = 0; i < linesSize(); ++i) {
+            for (int i = 0; i < lines.size(); ++i) {
                 sendLineChange(i, UpdateScorePacket.Action.CREATE_OR_UPDATE_SCORE);
             }
-        } finally {
-            linesLock.unlock();
-        }
+        });
     }
 
     public Component getTitle() {
-        return title.getComponent();
+        return withLock(() -> title.getComponent());
     }
 
     public void setTitle(Component title) {
-        setTitleSilent(title);
-
-        sendObjectivePacket(UpdateObjectivesPacket.Mode.UPDATE_SCOREBOARD);
-    }
-
-    private void setTitleSilent(Component title) {
-        this.title = new ComponentHolder(player.getProtocolVersion(), this.player.translateMessage(title));
+        Objects.requireNonNull(title, "title");
+        withLock(() -> {
+            setTitleSilent(title);
+            sendObjectivePacket(UpdateObjectivesPacket.Mode.UPDATE_SCOREBOARD);
+        });
     }
 
     public @Nullable ComponentUtils.NumberFormat getDefaultNumberFormat() {
-        return defaultNumberFormat;
+        return withLock(() -> defaultNumberFormat);
     }
 
     public void setDefaultNumberFormat(@Nullable ComponentUtils.NumberFormat defaultNumberFormat) {
-        this.defaultNumberFormat = defaultNumberFormat != null ? defaultNumberFormat.compiled(player.getProtocolVersion()) : null;
+        withLock(() -> {
+            this.defaultNumberFormat = defaultNumberFormat != null ? defaultNumberFormat.compiled(player.getProtocolVersion()) : null;
 
-        sendObjectivePacket(UpdateObjectivesPacket.Mode.UPDATE_SCOREBOARD);
+            sendObjectivePacket(UpdateObjectivesPacket.Mode.UPDATE_SCOREBOARD);
+        });
     }
 
     /**
@@ -103,9 +100,9 @@ public class SimpleBoard extends AbstractBoard {
      * @return an unmodifiable list of the current lines
      * @see #getLineComponents
      */
-    @UnmodifiableView
+    @Unmodifiable
     public List<LinesEntry> getLines() {
-        return Collections.unmodifiableList(lines);
+        return withLock(() -> List.copyOf(lines));
     }
 
     /**
@@ -119,17 +116,21 @@ public class SimpleBoard extends AbstractBoard {
      */
     @Unmodifiable
     public List<Component> getLineComponents() {
-        return lines.stream().map(LinesEntry::getComponent).toList();
+        return withLock(() -> lines.stream().map(LinesEntry::getComponent).toList());
     }
 
     public @Nullable LinesEntry getLine(int lineIndex) {
-        checkLineIndex(lineIndex, true);
-        return lines.get(lineIndex) != null ? lines.get(lineIndex) : null;
+        return withLock(() -> {
+            checkLineIndexUnsafe(lineIndex, true);
+            return lines.get(lineIndex) != null ? lines.get(lineIndex) : null;
+        });
     }
 
     public @Nullable Component getLineComponent(int lineIndex) {
-        checkLineIndex(lineIndex, true);
-        return lines.get(lineIndex) != null ? lines.get(lineIndex).getComponent() : null;
+        return withLock(() -> {
+            checkLineIndexUnsafe(lineIndex, true);
+            return lines.get(lineIndex) != null ? lines.get(lineIndex).getComponent() : null;
+        });
     }
 
     /**
@@ -137,43 +138,36 @@ public class SimpleBoard extends AbstractBoard {
      * @see #setLines(Collection)
      */
     public void setLineComponent(int lineIndex, Component lineComponent) {
+        Objects.requireNonNull(lineComponent, "lineComponent");
         setLine(lineIndex, new LinesEntry(lineComponent, null, player));
     }
 
     public void setLine(int lineIndex, LinesEntry line) {
-        checkLineIndex(lineIndex, false);
-        LinesEntry linesEntry = new LinesEntry(new ComponentHolder(player.getProtocolVersion(), player.translateMessage(line.getComponent())), line.formatCompiled(player.getProtocolVersion()));
+        Objects.requireNonNull(line, "line");
+        withLock(() -> {
+            checkLineIndexUnsafe(lineIndex, false);
+            LinesEntry linesEntry = new LinesEntry(new ComponentHolder(player.getProtocolVersion(), player.translateMessage(line.getComponent())), line.formatCompiled(player.getProtocolVersion()));
 
-        List<LinesEntry> newLines;
-        linesLock.lock();
-        try {
-            if (lineIndex < linesSize()) {
+            if (lineIndex < lines.size()) {
                 lines.set(lineIndex, linesEntry);
-                sendLineChange(getScoreByLine(lineIndex), UpdateScorePacket.Action.CREATE_OR_UPDATE_SCORE);
+                sendLineChange(getScoreByLineUnsafe(lineIndex), UpdateScorePacket.Action.CREATE_OR_UPDATE_SCORE);
                 return;
             }
-        } finally {
-            linesLock.unlock();
-        }
 
-        newLines = new ArrayList<>(lines);
-        if (lineIndex > linesSize()) {
-            for (int i = linesSize(); i < lineIndex; ++i) {
-                newLines.add(EMPTY_ENTRY);
-            }
-        }
-
-        newLines.add(linesEntry);
-        setLines(newLines);
+            List<LinesEntry> newLines = new ArrayList<>(lines);
+            ListUtils.setOrPad(newLines, lineIndex, line, () -> EMPTY_ENTRY);
+            setLines(newLines);
+        });
     }
 
     public void removeLine(int lineIndex) {
-        checkLineIndex(lineIndex, false);
-        if (lineIndex >= linesSize()) return;
-        List<LinesEntry> newLines = new ArrayList<>(lines);
+        withLock(() -> {
+            checkLineIndexUnsafe(lineIndex, true);
+            List<LinesEntry> newLines = new ArrayList<>(lines);
 
-        newLines.remove(lineIndex);
-        setLines(newLines);
+            newLines.remove(lineIndex);
+            setLines(newLines);
+        });
     }
 
     public void setLineComponents(Component... lineComponents) {
@@ -181,76 +175,80 @@ public class SimpleBoard extends AbstractBoard {
     }
 
     public void setLineComponents(Collection<Component> lineComponents) {
-        Objects.requireNonNull(lineComponents, "lines");
-        checkLineIndex(linesSize(), false);
-        List<LinesEntry> oldLines = new ArrayList<>(this.lines);
+        Objects.requireNonNull(lineComponents, "lineComponents");
+        withLock(() -> {
+            checkLineIndexUnsafe(lines.size(), false);
+            List<LinesEntry> oldLines = new ArrayList<>(lines);
 
-        linesLock.lock(); // lock while updating
-        try {
             setLinesComponentsSilent(lineComponents);
 
             updateScoreboard(oldLines);
-        } finally {
-            linesLock.unlock();
-        }
-    }
-
-    public void setLines(LinesEntry... lines) {
-        setLines(Arrays.asList(lines));
-    }
-
-    private void setLines(Collection<LinesEntry> lines) {
-        Objects.requireNonNull(lines, "lines");
-        checkLineIndex(linesSize(), false);
-        List<LinesEntry> oldLines = new ArrayList<>(this.lines);
-
-        linesLock.lock(); // lock while updating
-        try {
-            setLinesSilent(lines);
-
-            updateScoreboard(oldLines);
-        } finally {
-            linesLock.unlock();
-        }
+        });
     }
 
     /**
      * Useful for updating lines before a {@link #resend()}.
      */
     public void setLinesComponentsSilent(Collection<Component> lines) {
-        setLinesSilent(lines.stream().map(c -> new LinesEntry(
-                new ComponentHolder(player.getProtocolVersion(), player.translateMessage(c))
-                , null)).toList());
+        withLock(() -> {
+            this.lines.clear();
+            this.lines.addAll(lines.stream().map(c -> new LinesEntry(
+                    new ComponentHolder(player.getProtocolVersion(), player.translateMessage(c)),
+                    null)).toList());
+        });
+    }
+
+    public void setLines(LinesEntry... lines) {
+        setLines(Arrays.asList(lines));
     }
 
     /**
      * Useful for updating lines before a {@link #resend()}.
      */
     public void setLinesSilent(Collection<LinesEntry> lines) {
-        linesLock.lock();
-        try {
+        withLock(() -> {
             this.lines.clear();
             this.lines.addAll(lines);
-        } finally {
-            linesLock.unlock();
-        }
+        });
+    }
+
+    public int linesSize() {
+        return withLock(lines::size);
+    }
+
+    @Override
+    public void clear() {
+        withLock(() -> sendObjectivePacket(UpdateObjectivesPacket.Mode.REMOVE_SCOREBOARD));
+    }
+
+    @Override
+    public void delete() {
+        withLock(() -> {
+            super.delete();
+            title = null;
+            lines.clear();
+            defaultNumberFormat = null;
+        });
+    }
+
+    private void setTitleSilent(Component newTitle) {
+        title = new ComponentHolder(player.getProtocolVersion(), player.translateMessage(newTitle));
     }
 
     private void updateScoreboard(List<LinesEntry> oldLines) {
-        int linesSize = this.linesSize();
-        if (oldLines.size() != linesSize && oldLines.size() > linesSize) {
-            for (int i = oldLines.size(); i > linesSize; i--) {
+        if (oldLines.size() != lines.size() && oldLines.size() > lines.size()) {
+            for (int i = oldLines.size(); i > lines.size(); i--) {
                 sendLineChange(i, UpdateScorePacket.Action.REMOVE_SCORE);
 
                 oldLines.remove(0);
             }
         } else {
-            for (int i = oldLines.size(); i < linesSize; i++) {
+            for (int i = oldLines.size(); i < lines.size(); i++) {
                 sendLineChange(i, UpdateScorePacket.Action.CREATE_OR_UPDATE_SCORE);
             }
         }
 
-        for (int i = 0; i < linesSize; ++i) {
+        for (int i = 0; i < lines.size(); ++i) {
             LinesEntry newLine = getLineByScore(lines, i);
             if (newLine == null) continue;
             LinesEntry oldLine = getLineByScore(oldLines, i);
@@ -261,23 +259,36 @@ public class SimpleBoard extends AbstractBoard {
         }
     }
 
-    private void checkLineIndex(int lineIndex, boolean checkInRange) {
+    private void setLines(Collection<LinesEntry> lines) {
+        Objects.requireNonNull(lines, "lines");
+        withLock(() -> {
+            checkLineIndexUnsafe(lines.size(), false);
+            List<LinesEntry> oldLines = new ArrayList<>(this.lines);
+
+            this.lines.clear();
+            this.lines.addAll(lines);
+
+            updateScoreboard(oldLines);
+        });
+    }
+
+    private void checkLineIndexUnsafe(int lineIndex, boolean checkInRange) {
         if (lineIndex < 0) {
             throw new IllegalArgumentException("Line index must be non-negative");
         }
 
-        if (checkInRange && lineIndex >= linesSize()) {
-            throw new IllegalArgumentException("Line index must be within the valid range (index >= 0 && index < " + linesSize() + ")");
+        if (checkInRange && lineIndex >= lines.size()) {
+            throw new IllegalArgumentException("Line index must be within the valid range (index >= 0 && index < " + lines.size() + ")");
         }
     }
 
-    private int getScoreByLine(int lineIndex) {
-        return linesSize() - lineIndex - 1;
+    private int getScoreByLineUnsafe(int lineIndex) {
+        return lines.size() - lineIndex - 1;
     }
 
-    private @Nullable LinesEntry getLineByScore(List<LinesEntry> lines, int score) {
-        if (score < linesSize()) {
-            return lines.get(linesSize() - score - 1);
+    private static @Nullable LinesEntry getLineByScore(List<LinesEntry> lines, int score) {
+        if (score < lines.size()) {
+            return lines.get(lines.size() - score - 1);
         } else {
             return null;
         }
@@ -317,28 +328,6 @@ public class SimpleBoard extends AbstractBoard {
                         defaultNumberFormat
                 )
         );
-    }
-
-    public int linesSize() {
-        return lines.size();
-    }
-
-    @Override
-    public void clear() {
-        this.sendObjectivePacket(UpdateObjectivesPacket.Mode.REMOVE_SCOREBOARD);
-    }
-
-    @Override
-    public void delete() {
-        super.delete();
-        title = null;
-        linesLock.lock();
-        try {
-            lines.clear();
-        } finally {
-            linesLock.unlock();
-        }
-        defaultNumberFormat = null;
     }
 
 }
